--- a/sites/all/themes/JBW/css/events.css
+++ b/sites/all/themes/JBW/css/events.css
@@ -132,30 +132,31 @@
     overflow: hidden;
 }
 
-.page-events .events-body p,
+/*.page-events .events-body p,
 .page-events .events-body a,
 .page-festival .events-body p,
 .page-festival .events-body a{
     margin-bottom: 3px;
     color: white;
-}
+}*/
 
 .page-events .events-body p,
 .page-festival .events-body p{
+    margin-top: 3px;
     margin-left: 5px;
 }
 
 .page-events .events-body .views-field-title,
 .page-festival .events-body .views-field-title{
     margin-left: 5px;
-    font-size: 10px;
-    margin-bottom: 3px;
+   /* font-size: 10px;
+    margin-bottom: 3px;*/
 }
 
 .page-events .events-body .views-field-title a,
 .page-festival .events-body .views-field-title a{
     text-decoration: none;
-    color: #fff;
+    /*color: #fff;*/
 }
 
 .page-events .events-body .views-field-title a:hover,
@@ -167,8 +168,8 @@
 .page-events .events-body .views-field-body,
 .page-festival .events-body .views-field-body{
     margin-left: 5px;
-    font-size: 8px;
-    color: #fff;
+    /*font-size: 8px;
+    color: #fff;*/
     margin-bottom: 3px;
 }
 
@@ -180,7 +181,8 @@
     position: absolute;
     right: 95px;
     /*top: 25px;*/
-    top: 45px;
+    /*top: 45px;*/
+    top: 40px;
     z-index: 10;
 }
 
@@ -463,7 +465,7 @@
     height: 15px;*/
     position: absolute;
     right: 250px;
-    top: 45px;
+    top: 40px;
     z-index: 10;
 }
 
