--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -8,16 +8,19 @@
 .page-events a,
 .page-news a,
 .page-node a,
+.page-blog a,
 .page-festival a,
 .page-home a:link,
 .page-events a:link,
 .page-news a:link,
 .page-node a:link,
+.page-blog a:link,
 .page-festival a:link,
 .page-home a:visited,
 .page-events a:visited,
 .page-news a:visited,
 .page-node a:visited,
+.page-blog a:visited,
 .page-festival a:visited{
     text-decoration: none;
     color: #58595b;
