--- a/sites/all/themes/JBW/css/events.css
+++ b/sites/all/themes/JBW/css/events.css
@@ -14,6 +14,7 @@
 .page-events #block-system-main,
 .page-festival #block-system-main{
     float: right;
+    width: 445px;
     position: relative;
 }
 
