--- a/sites/all/themes/JBW/css/festival.css
+++ b/sites/all/themes/JBW/css/festival.css
@@ -31,7 +31,8 @@
 .page-node h1#page-title,
 .page-news h1#page-title,
 .page-events h1#page-title,
-.page-festival h1#page-title{
+.page-festival h1#page-title,
+.page-checkout h1#page-title{
     float: left;
     margin-top: 20px;
     margin-left: 15px;
