--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -32,9 +32,18 @@
 .page-news #region-content h1#page-title,
 .page-node #region-content h1#page-title,
 .page-festival #region-content h1#page-title,
-.page-checkout #region-content h1#page-title{
+.page-checkout #region-content h1#page-title,
+.page-cart #region-content h1#page-title{
     color: #333333;
     font-size: 17px;
+    font-weight: normal;
+    line-height: 1em;
+    padding-top: 0;
+}
+
+.page-blog #region-header h1#page-title{
+    color: #333333;
+    font-size: 24px;
     font-weight: normal;
     line-height: 1em;
     padding-top: 0;
@@ -120,4 +129,17 @@
 .page-checkout #edit-customer-profile-billing{
     font-size: 12px;
     font-weight: normal;
+}
+
+/*-------------------------------Shopping cart---------------------------------*/
+.page-cart .views-field-title,
+.page-cart .views-field-commerce-unit-price,
+.page-cart .views-field-edit-quantity,
+.page-cart .views-field-commerce-total,
+.page-cart .views-field-edit-delete{
+    margin-left: 5px;
+    margin-bottom: 3px;
+    font-family: georgia;
+    font-style: italic;
+    font-size: 10px;
 }
