--- a/sites/all/themes/JBW/css/fonts.css
+++ b/sites/all/themes/JBW/css/fonts.css
@@ -143,3 +143,8 @@
     font-style: italic;
     font-size: 10px;
 }
+
+/*---------------------------------Check out label-----------------------------*/
+.page-checkout label{
+    font-weight: normal;
+}
